--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Views.MainActivity">
 
 
     <ScrollView
@@ -105,7 +105,7 @@
                             android:text="Marvel Super Heroes"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat"
-                            android:textSize="24sp"
+                            android:textSize="30sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
