--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="49dp"
+                    android:layout_marginTop="16dp"
+                    android:text="Choose A Quiz!"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textSize="36sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <android.support.v7.widget.CardView
                     android:id="@+id/MathCard"
-                    android:layout_width="368dp"
+                    android:layout_width="355dp"
                     android:layout_height="116dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="20dp"
                     app:cardElevation="7dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toBottomOf="@+id/textView">
 
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
@@ -52,13 +62,11 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/PhysicsCard"
-                    android:layout_width="368dp"
+                    android:layout_width="355dp"
                     android:layout_height="116dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
                     app:cardElevation="7dp"
                     app:layout_constraintEnd_toEndOf="@+id/MathCard"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="@+id/MathCard"
                     app:layout_constraintTop_toBottomOf="@+id/MathCard">
 
@@ -82,15 +90,13 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/MarvelCard"
-                    android:layout_width="368dp"
+                    android:layout_width="355dp"
                     android:layout_height="116dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginTop="16dp"
                     app:cardElevation="7dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/PhysicsCard"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/PhysicsCard"
                     app:layout_constraintTop_toBottomOf="@+id/PhysicsCard">
 
