Finished part3 for quizdroid

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                             android:id="@+id/MathTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Math"
+                            android:text="Topic"
                             android:textAppearance="@style/TextAppearance.AppCompat"
                             android:textSize="30sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
                             android:id="@+id/PhysicsTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Physics"
+                            android:text="Topic"
                             android:textAppearance="@style/TextAppearance.AppCompat"
                             android:textSize="30sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -142,7 +142,7 @@
                             android:id="@+id/MarvelTitle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Marvel Super Heroes"
+                            android:text="Topic"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat"
                             android:textSize="30sp"
