Finished toolbar and preferences activity

--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -12,4 +12,12 @@
         android:layout_height="wrap_content"
         android:text="QuizDroid"
         android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
+
+    <ImageView
+        android:id="@+id/preferencesIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_settings"
+        android:layout_alignParentEnd="true"
+        />
 </android.support.v7.widget.Toolbar>
